data/derived/comb/progs/unify/prog0405.ml.out
Characters 31-34:
  let _ = stringOfList (fun x -> x+1) [1;2;3;4];;
                                 ^^^
Error: This expression has type int but an expression was expected of type
         string
